test/bad/iccomment-in.c
/* Invalid character inside comment */
int x;
